// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Player /> renders defense correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "textAlign": "center",
        "textAlignVertical": "center",
      },
      {
        "backgroundColor": "#000000",
      },
      {
        "borderRadius": 10,
        "height": 10,
        "width": 10,
      },
    ]
  }
>
  <Text
    style={
      {
        "color": "#fff",
        "fontWeight": "bold",
      }
    }
  >
    1
  </Text>
</View>
`;

exports[`<Player /> renders offense correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "textAlign": "center",
        "textAlignVertical": "center",
      },
      {
        "backgroundColor": "#2a9e91",
      },
      {
        "borderRadius": 10,
        "height": 10,
        "width": 10,
      },
    ]
  }
>
  <Text
    style={
      {
        "color": "#fff",
        "fontWeight": "bold",
      }
    }
  >
    1
  </Text>
</View>
`;
